fix: update dark mode card background color for better contrast

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -84,7 +84,7 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 
 	&[data-scheme="dark"] {
 		--card-background: #424242;
-		--card-background-selected: rgba(255, 255, 255, 0.16);
+		--card-background-selected: #585858;
 		--card-text-color-main: rgba(255, 255, 255, 0.9);
 		--card-text-color-secondary: rgba(255, 255, 255, 0.7);
 		--card-text-color-tertiary: rgba(255, 255, 255, 0.5);
